2009-02-10  Arno Rehn  <arno@arnorehn.de>
	* Get rid of application_terminated checks in methodcall.cpp and make the
	  application cleanup properly. The problem was WeakReference.IsValid being
	  false when the application was in the process of shutting down, even though
	  the target object was still there. When shutting down, convert weak refs to
	  strong refs and check for objects in the global reference map.
	  Only thing that doesn't work correctly is QCoreApplication and subclasses.
	  It's expected to be deleted as the last Qt object and a bug in QApplication
	  is preventing its deletion in an atexit() function. Work around that by not
	  calling it's destructor for now.

2009-02-23  Arno Rehn  <arno@arnorehn.de>
	* Apply a patch from Eric Butler: Fix Qyoto.GetCPPEnumValue() to return the
	  correct value.

2009-02-20  Richard Dale  <richard.j.dale@gmail.com>
	* Regenerate the Qyoto sources from the Qt 4.5 headers

2009-02-17  Arno Rehn  <arno@arnorehn.de>
	* Give some delegates more sophisticated names.
	* Add support for C# events. They're called Signal<signalName> and if they're
	  overloaded, additionally have their arguments attached to their name.
	  This should be considered highly experimental and can change at any time.

2009-02-16  Arno Rehn  <arno@arnorehn.de>
	* Add QTextBlock and QTextFrame iterators. operator++ and operator-- are
	  instance members in C++, but map onto static members in C#. Take care of
	  that in CallSmokeMethod().
	* If there's an AssemblyTitleAttribute present, the fake argv[0] argument for
	  Q(Core)Application will now have its 'Title' value. If not, argv[0] is the
	  basename of the entry assembly. This is based on a suggestion by Eric Butler,
	  thanks!

2009-02-01  Richard Dale  <richard.j.dale@gmail.com>
	* The construct_copy() function was using the full classname of the class
	  to construct which meant that it didn't work with classnames containing